fix: center align footer logo

--- a/src/Components/Footer/scss/style.scss
+++ b/src/Components/Footer/scss/style.scss
@@ -25,7 +25,7 @@
         height: auto;
         max-width: 100%;
         display: block;
-
+        margin: 0 auto;
     }
 
     h1 {
